Attempt to fix 100vh issue on iPhone

--- a/frontend/src/components/Modal/styles.scss
+++ b/frontend/src/components/Modal/styles.scss
@@ -30,6 +30,8 @@
 
     .body {
         text-align: justify;
+        height: 100%;
+        -webkit-overflow-scrolling: touch;
         overflow-y: auto;
         margin-top: calc(var(--grid-unit) * 2px);
     }
